--- a/.config/uwsgi/app.ini
+++ b/.config/uwsgi/app.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 
-chdir = /srv/zaksim/App
+chdir = /srv/zaksim/app
 module = config.wsgi:application
 home = /home/ubuntu/.pyenv/versions/zaksim
 
